apps/helpdesk/src/pages/aiAgent/components/KnowledgeEditor/KnowledgeEditorHelpCenterArticle/KnowledgeEditorHelpCenterArticleEditView.less
:local {
    .container {
        width: 100%;
    }

    .editor {
        :global {
            .fr-toolbar {
                border: none;
                background-color: var(--elevation-neutral-mid) !important;
                color: var(--content-neutral-default) !important;
                overflow-x: auto !important;
                overflow-y: hidden !important;
                display: flex !important;
                flex-wrap: nowrap !important;
            }

            .fr-view {
                color: var(--content-neutral-default) !important;
            }

            .fr-btn-grp {
                flex-shrink: 0 !important;
            }

            .fr-separator {
                flex-shrink: 0 !important;
            }

            .fr-wrapper {
                border: none !important;
                background: none !important;
            }

            .fr-second-toolbar {
                display: none;
            }

            .fr-newline {
                display: none !important;
            }

            .fr-more-toolbar {
                display: none !important;
            }
        }
    }
}

